--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^3.10.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-google-maps": "^4.7.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "react-sparklines": "^1.6.0",
